--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -135,7 +135,7 @@
                                     (click)="toggleAltStep()" />
                             </div>
                             <div class="form-row" *ngIf="useFixStepSize">
-                                Solver Step Size of (0.1-1.0)<div><input type="number" class="input-number"
+                                Step Size of (0.01-0.1)<div><input type="number" class="input-number"
                                         formControlName="fixStepSize" /> / day</div>
                             </div>
                         </div>
