--- a/src/app/components/output/execution-panel/execution-panel.component.html
+++ b/src/app/components/output/execution-panel/execution-panel.component.html
@@ -1,6 +1,6 @@
 <div class="execution-container container-item">
     <div>
-        <div>Simulation Status: {{ simStatus }}</div>
+        <div><strong>Simulation Status:</strong> {{ simStatus }}</div>
         <div>{{ status_message }}</div>
     </div>
     <div class="button" *ngIf="!simComplete">
