--- a/src/app/components/output/segment-status-list/segment-status-list.component.html
+++ b/src/app/components/output/segment-status-list/segment-status-list.component.html
@@ -1,5 +1,5 @@
 <div class="section-item">
-    Segment Status
+    <div class="centered"><strong>Segment Status</strong></div>
     <div class="scroll">
         <div class="items">
             <div class="segment-status item" *ngFor="let segment of segmentList" (click)="gotoData(segment.comid)"
