--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -1,4 +1,5 @@
 body {
+    height: 100vh;
     display: grid;
     grid-template-rows: auto auto 1fr auto;
     background-color: var(--main-epa);
@@ -9,9 +10,9 @@ app-footer {
 }
 
 ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .task-bar {
@@ -23,24 +24,24 @@ ul {
 }
 
 .row-left {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .row-right {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .back {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: x-large;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
 }
 
 .segment-status {
-  margin: 0 1px 0 1px;
+    margin: 0 1px 0 1px;
 }
 
 .add {
@@ -48,102 +49,79 @@ ul {
     color: rgba(0, 0, 0, 0.54);
 }
 
-/*****************/ 
-.dashboard-container {
-  display: flex;
-  flex-direction: row;
-    min-width: 0;
-    min-height: 0;
-    margin: 0 7px 10px 7px;
+/*****************/
+.output-panels {
+    display: flex;
+    flex-wrap: wrap;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+    column-gap: 0.25rem;
+    row-gap: 0.25rem;
+    background-color: darkgreen;
 }
 
-.hide {
-  display: none;
+.output-panel {
+    flex: 1 1 33%;
 }
 
-.cdkDropListGroup {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
+.output-panel-controls {
+    position: absolute;
+    right: 0px;
+    display: grid;
+    grid-template-columns: auto auto;
 }
 
-.cdkDrag {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  border: none;
-  background-color: white;
-  border-radius: 1px;
-  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-}
-
-.cdkDropList {
-  flex: 1 0 5rem; /* NEW */
-  margin: 5px;
-  background-color: transparent;
-  position: relative;
-  min-width: 400px;
-  min-height: 0;
-  max-height: 100%;
+.output-panel-remove,
+.output-panel-drag-handle {
+    cursor: move;
+    width: 24px;
+    height: 24px;
 }
 
 .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.cdkDragHandle {
-  position: absolute;
-  top: 5px;
-  right: 7px;
-  color: #ccc;
-  cursor: move;
-  width: 24px;
-  height: 24px;
-  z-index: 10;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .left-panel {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  width: 200px;
-  height: 100%;
-  padding: 5px 0;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 200px;
+    height: 100%;
+    padding: 5px 0;
 }
 
 .left-panel-container {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  height: 100%;
-  padding: 5px;
-  background-color: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 5px;
+    background-color: var(--main-color);
 }
 
 .left-panel button {
-  width: 100%;
+    width: 100%;
 }
 
 .list-container {
-  margin: 10px 0;
-  overflow-y: auto;
-  flex: 1
+    margin: 10px 0;
+    overflow-y: auto;
+    flex: 1;
 }
 
 .map-container {
-  height: 100%;
-  width: 100%;
-  flex: 1;
+    height: 100%;
+    width: 100%;
+    flex: 1;
 }
 
 .chevron {
-  margin-top: 5px;
-  margin-left: 1px;
-  background-color: var(--main-transparent);
+    margin-top: 5px;
+    margin-left: 1px;
+    background-color: var(--main-transparent);
 }
 
 .chevron:hover {
-  background-color: var(--main-hover);
+    background-color: var(--main-hover);
 }
