--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,11 @@
     --main-ready: rgb(0, 190, 19);
     --main-fail: rgb(255, 0, 0);
 
-    --main-border: rgb(150, 150, 150);
+    /* --main-border: rgb(150, 150, 150); */
+    --main-border: rgb(240, 6, 6);
 
-    --row-gap: .19rem;
-    --column-gap: .125rem;
+    --row-gap: 0.19rem;
+    --column-gap: 0.125rem;
 
     --main-max-panel-height: 74vh;
 
@@ -26,7 +27,7 @@ html {
     scroll-behavior: smooth;
 }
 
-body { 
+body {
     margin: 0px;
     height: 100vh;
     font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -34,7 +35,7 @@ body {
 
 .button,
 .segment-status {
-    font-size: .75rem;
+    font-size: 0.75rem;
     display: grid;
     place-items: center;
     height: 1.5rem;
@@ -45,9 +46,9 @@ body {
 }
 
 .button {
-	-webkit-box-shadow: 0 3px 3px -2px black;
-	   -moz-box-shadow: 0 3px 3px -2px black;
-	        box-shadow: 0 3px 3px -2px black;
+    -webkit-box-shadow: 0 3px 3px -2px black;
+    -moz-box-shadow: 0 3px 3px -2px black;
+    box-shadow: 0 3px 3px -2px black;
 }
 
 .button.map-options {
@@ -57,13 +58,12 @@ body {
 .button:active {
     transform: translateY(2px);
     -webkit-box-shadow: none;
-       -moz-box-shadow: none;
-            box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
 
-
 .button:hover,
-.segment-status:hover ,
+.segment-status:hover,
 mat-icon:hover {
     background-color: var(--main-hover);
 }
@@ -114,7 +114,7 @@ mat-icon:hover {
 }
 
 .container-item {
-    padding: .25rem;
+    padding: 0.25rem;
     background-color: var(--main-color);
     border: 1px solid var(--main-border);
 }
@@ -141,8 +141,12 @@ mat-icon:hover {
 }
 
 @keyframes splash {
-    from { opacity: 0.0; } 
-    to { opacity: 1.0 }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .splash {
@@ -153,9 +157,9 @@ mat-icon:hover {
 mat-icon:hover,
 .segment-status,
 select,
-input[type='number'],
-input[type='date'],
-input[type='radio'] {
+input[type="number"],
+input[type="date"],
+input[type="radio"] {
     cursor: pointer;
 }
 
@@ -163,18 +167,18 @@ input[type='radio'] {
     z-index: 9999;
 }
 
-input[type='number'] {
+input[type="number"] {
     text-align: center;
 }
 
-input[type='number'].input-number {
+input[type="number"].input-number {
     width: 100px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -182,11 +186,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px lightgrey; 
+    box-shadow: inset 0 0 5px lightgrey;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: gray; 
+    background: gray;
 }
 
 ::-webkit-scrollbar-thumb:hover {
